<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp"
    android:gravity="center"
    android:background="@color/app_background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_title"
        android:textColor="@color/primary_text"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="32dp"/>

    <EditText
        android:id="@+id/etRegisterEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/secondary_text"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:backgroundTint="@color/rick_green"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/etRegisterPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_password"
        android:textColor="@color/primary_text"
        android:textColorHint="@color/secondary_text"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:backgroundTint="@color/rick_green"
        android:layout_marginBottom="24dp"/>

    <Button
        android:id="@+id/btnDoRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_register"
        android:backgroundTint="@color/rick_green"
        android:textColor="@color/rick_blue"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/tvGoToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_back_login"
        android:textColor="@color/secondary_text"
        android:textSize="16sp"
        android:padding="8dp"/>

</LinearLayout>